[package]
name = "dix-victoires"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Node",
    "Event",
    "HtmlInputElement",
    "Navigator",
    "Clipboard",
] }
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
